# vega

./: .dockerignore  .gitignore  .travis.yml  404.html  Cargo.toml  README.md  build.rs  chapter_1.html  index.html  print.html  rust-toolchain  rustfmt.toml  searchindex.js  searchindex.json  userGuide.travis.yml
.cargo/: config
config_files/: hosts.conf
docker/: Dockerfile  build_image.sh  docker-compose.yml  id_rsa  id_rsa.pub  testing_cluster.sh
examples/: dijkstra.rs  file_read.rs  group_by.rs  groupby.rs  join.rs  kmeans.rs  lr.rs  make_rdd.rs  mm.rs  pagerank.rs  parquet_column_read.rs  pearson.rs  subtract.rs  tc.rs  top.rs  tri.rs
src/: aggregator.rs  cache.rs  cache_tracker.rs  co_grouped_rdd.rs  context.rs  dag_scheduler.rs  dependency.rs  distributed_scheduler.rs  env.rs  error.rs  executor.rs  hosts.rs  job.rs  job_listener.rs  lib.rs  live_listener_bus.rs  local_ip.rs  local_scheduler.rs  map_output_tracker.rs  pair_rdd.rs  parallel_collection.rs  partitioner.rs  rdd.rs  result_task.rs  scheduler.rs  serializable_traits.rs  shuffle_fetcher.rs  shuffle_manager.rs  shuffle_map_task.rs  shuffled_rdd.rs  split.rs  stage.rs  task.rs  utils.rs
src/capnp/: serialized_data.capnp
src/dataframe/: array.rs  column.rs  datatype.rs  mod.rs
src/fs/: common_config_keys.rs  file_system.rs  mod.rs  path.rs
src/io/: file_reader.rs  local_file_reader.rs  mod.rs
src/partial/: approximate_action_listener.rs  approximate_evaluator.rs  bounded_double.rs  count_evaluator.rs  grouped_count_evaluator.rs  mod.rs  partial_result.rs
src/rdd/: cartesian_rdd.rs  co_grouped_rdd.rs  coalesced_rdd.rs  flatmap_rdd.rs  flatmapper_rdd.rs  map_partitions_rdd.rs  mapper_rdd.rs  mod.rs  pair_rdd.rs  parallel_collection_rdd.rs  partitionwise_sampled_rdd.rs  rdd.rs  shuffled_rdd.rs  union_rdd.rs  zip_rdd.rs
src/scheduler/: base_scheduler.rs  dag_scheduler.rs  distributed_scheduler.rs  job.rs  job_listener.rs  listener.rs  live_listener_bus.rs  local_scheduler.rs  mod.rs  result_task.rs  task.rs
src/shuffle/: mod.rs  shuffle_fetcher.rs  shuffle_manager.rs  shuffle_map_task.rs
src/util/: mod.rs  random.rs
src/utils/: bounded_priority_queue.rs  mod.rs  random.rs  test_utils.rs
tests/: .test_async.rs.swp  test_async.rs  test_group_by.rs  test_join.rs  test_make_rdd.rs  test_pair_rdd.rs  test_rdd.rs  test_union.rs
userGuide/: .travis.yml  book.toml
userGuide/src/: SUMMARY.md  chapter_1.md
user_guide/src/: chapter_1.md
