[package]
name = "native_spark"
version = "0.1.0"
authors = ["raja <rajasekar3eg@gmail.com>"]
edition = "2018"

build = "build.rs"

[lib]
name = "native_spark"

[features]
aws_connectors = ["rusoto_core", "rusoto_s3"]

[dependencies]
crossbeam = "0.7.3"
dashmap = "^3.5.1"
envy = "^0.4.1"
fasthash = "0.4.0"
futures = "0.3"
hyper = "0.13.4"
http = "0.2.1"
itertools = "0.9.0"
num_cpus = "1.12.0"
log = "0.4.8"
once_cell = "1.3.1"
parking_lot = { version = "0.10.0", features = ["serde"] }
simplelog = "0.7.4"
thiserror = "1.0.13"
threadpool = "1.7.1"
toml = "0.5.6"
tokio = { version = "^0.2", features = ["rt-threaded", "stream", "sync", "time"] }
tokio-util = { version = "0.3.1", features = ["compat"] }
uuid = { version = "0.8", features = ["v4"] }
regex = "1.3.6"

# randomness
rand = "0.7.3"
rand_distr = "0.2"
rand_pcg = "0.2"

# serialization
bincode = "1.2.1"
capnp = "0.12.1"
capnp-futures = "0.12.0"
serde = { version = "1.0.105", features = ["rc"] }
serde_closure = "^0.2.9"
serde_derive = "1.0.105"
uriparse = "0.6.1"

# dynamic typing
downcast-rs = "1.1.1"
dyn-clone = "1.0.1"
serde_traitobject = "0.2.4"

# optional features
## aws
rusoto_core = { version = "0.43", optional = true }
rusoto_s3 = { version = "0.43", optional = true }

[build-dependencies]
capnpc = "0.12.1"

[dev-dependencies]
async-std = { version = "1.5.0", features = ["attributes"] } 
chrono = "0.4.11"
parquet = "0.15.1"
tempfile = "3"
tokio = { version = "^0.2", features = ["macros"] }
